tests/errors/unsatisfied-requirement.expect
---CODE---
1
---STDERR---
error: source port does not provide value for as long as destination requires
   ┌─ tests/errors/unsatisfied-requirement.fil:11:16
   │
11 │   m0 := M<G+1>(left, right);
   │                ^^^^ source is available for [G, G+1]
   │
   ┌─ ./primitives/./comb.fil:23:6
   │
23 │      left: [G, L] #IN_WIDTH,
   │      ---- requires value for [G+1, G+2]

error: source port does not provide value for as long as destination requires
   ┌─ tests/errors/unsatisfied-requirement.fil:12:9
   │
12 │   out = m0.out;
   │   ----  ^^^^^^ source is available for [G+1, G+2]
   │   │      
   │   requires value for [G+3, G+4]

Compilation failed with 2 errors.
Run with --show-models to generate assignments for failing constraints.
